--- a/vignettes/DesignPrimers.Rnw
+++ b/vignettes/DesignPrimers.Rnw
@@ -174,7 +174,7 @@ tiles <- TileSeqs(dbConn, add2tbl="Tiles", minCoverage=1)
 \begin{Sinput}
   |===========================================================================| 100%
 
-Time difference of 102.9 secs
+Time difference of 34.79 secs
 \end{Sinput}
 \end{Schunk}
 
@@ -413,7 +413,7 @@ Often it is useful to visualize the sequence region where the primers will annea
 <<expr13,eval=TRUE>>=
 dna <- SearchDB(dbConn)
 dbDisconnect(dbConn)
-amplicon <- subseq(dna, 247, 344)
+amplicon <- subseq(dna, 247, 348)
 names(amplicon) <- desc
 # only show unique sequences
 u_amplicon <- unique(amplicon)
@@ -427,7 +427,7 @@ amplicon <- c(amplicon[w], amplicon[-w])
 Then we can use the function \Rfunction{BrowseSequences} to visualize the target site for each primer in the amplicon.  This command will open a new window in the default web browser.  The top sequence shows the target (\textit{S. avermitilis}), and each primer's target site is colored.  We can highlight the target sequence so that only mismatches are colored in the non-target sequences.  It is clear why this target site was chosen, because all other \textit{Streptomyces} species have multiple mismatches to both the forward and reverse primers.  The non-target mismatches, especially those located nearest the 3' end (towards the center of the amplicon), will act to lower both hybridization and elongation efficiency of non-target amplification.
 
 <<expr14,eval=FALSE>>=
-BrowseSequences(amplicon, color=c(4, 27, 76, 94), highlight=1)
+BrowseSequences(amplicon, colorPatterns=c(4, 27, 76, 94), highlight=1)
 @
 
 \begin{figure}
